Change to the CSS file to ensure that the background image was covering the entire page, which is was not doing previously.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 *
 {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+   
 }
 
-header
+body
 {
 	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(backdrop.jpg);
 	height: 100vh;
@@ -22,13 +25,14 @@ header
 
 .block-1
 {
+	position: absolute;
 	max-width: 1200px;
 	margin: auto;
 }
 
 .block-2
 {
-	position: absolute;
+	position: relative;
 	width: 1200px;
 	margin-left: 0px;
 	margin-top: 0px;
@@ -45,7 +49,7 @@ h1
 
 .block-3
 {
-
+	position: relative;
 }
 
 .lbjphoto
